# flyerbot

./: .gitignore  README.md  pyproject.toml
contrib/: credentials.sh  deploy.md  flyerbot.service
src/kousu/flyerbot/: __main__.py  bot.py  slixmpp_bookmarks.py  slixmpp_fast.py  slixmpp_omemo.py  slixmpp_sasl2.py  util.py
